--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -210,11 +210,18 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
-    h2 {
-        font-size: 32px;
+    h1 {
+        font-size: 34px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
+        }
+    }
+    h2 {
+        font-size: 30px;
+
+        @include media-query($on-laptop) {
+            font-size: 26px;
         }
     }
 
